<resources>
    <string name="app_name">Coopappi Ltda</string>
    <string name="c_digo_fijo">Código Fijo:</string>
    <string name="cfijo">Código Fijo: </string>
    <string name="string1">Validación</string>
    <string name="cancelar">Cancelar</string>
    <string name="aceptar">Aceptar</string>
    <string name="historial">Facturas</string>
    <string name="iconocoopappi">IconoCoopappi</string>
    <string name="atras">Atras</string>
    <string name="consultar">CONSULTAR</string>
    <string name="volver">Volver</string>
    <string name="icono_de_aplicacion">Icono de aplicacion</string>
    <string name="consultas">CONSULTAS</string>
    <string name="total_facturas_impagas">Total Facturas Impagas: </string>
    <string name="fecha_de_corte">Fecha de Corte: </string>
    <string name="total_monto">Total monto adeudado (bs.): </string>
    <string name="socio">Nombre:</string>
    <string name="fecha">Fecha</string>
    <string name="consumo">Consumo</string>
    <string name="monto">Monto</string>
    <string name="fecha_de_pago">Fecha de Pago</string>
    <string name="cod_ubicaci_n">Ingresar Cédula/ Nit o Ruc: </string>
    <string name="datos_del_socio">Datos del Socio</string>
    <string name="title_activity_requisitos">requisitos</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="lorem_ipsum">lorem_ipsum</string>
    <string name="requisitos_del_servicio">Requisitos del Servicio</string>
    <string name="requisito_1">Instalacón de Agua Potable</string>
    <string name="requisito_2">Requisito 2</string>
    <string name="requisito_3">Requisito 3</string>
    <string name="requisito_4">Requisito 4</string>
    <string name="consulta_de_facturas">Consulta de Facturas</string>
    <string name="boton_hacia_atras">Boton hacia atras</string>
    <string name="nuevo">Agregar</string>
    <string name="editar">Editar</string>
    <string name="borrar">Borrar</string>
    <string name="el_item_del_socio">El item del socio</string>
    <string name="nombre">Nombre: </string>
    <string name="c_digo">Código</string>
    <string name="ingrese_su_c_digo_fijo">Ingrese su código fijo</string>
    <string name="c_dula_de_identidad">Cédula de identidad/Nit/Ruc:</string>
    <string name="alias">Alias:</string>
    <string name="nombre_de_referncia">Nombre de referncia:</string>
    <string name="datos">Datos</string>
    <string name="nombre_de_socio">Nombre de socio</string>
    <string name="c_digo_de_ubicaci_n">Código de ubicación:</string>
    <string name="direcci_n">Dirección: </string>
    <string name="facturas">Facturas</string>
    <string name="mes">MES</string>
    <string name="consumo_m3">Consumo m3</string>
    <string name="importe_bs">Importe Bs.</string>
    <string name="estado">Estado</string>
    <string name="impaga">IMPAGA</string>
    <string name="_20020_03">20020-03</string>
    <string name="_100">100</string>
    <string name="_150_00bs">150.00Bs.</string>
    <string name="listo">Listo</string>
    <string name="eliminar">Eliminar</string>
    <string name="elija_la_opci_n_que_desea_eliminar">Elija la opción que desea eliminar</string>
    <string name="elija_la_opci_n_que_desea_editar">Elija la opción que desea editar</string>
    <string name="text_view">Text View</string>
    <string name="title_activity_maps">Map</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="facturaci_n">Facturación</string>
    <string name="facturas_pagadas">Facturas Pagadas</string>
    <string name="su_factura_del_mes">Su factura del mes</string>
    <string name="afiliados">Afiliados</string>
    <string name="calcula_tu_factura">Calcula tu factura</string>
    <string name="aviso_de_cobranza_afiliados">Aviso de Cobranza - Afiliados</string>
    <string name="avisos_de_cobranza">AVISOS DE COBRANZA</string>
    <string name="corte_por_deudas_afiliados">Corte por deudas - Afiliados</string>
    <string name="lista_de_cortes">Lista de cortes</string>
    <string name="mantenimiento_lista_de_nafiliados">Mantenimiento Preventivo\nLista de Afiliados</string>
    <string name="relaciones_p_blicas_n_lista_de_afiliados">Relaciones Públicas\n Lista de Afiliados</string>
    <string name="nueva_conexi_n_nlista_de_afiliados">Nueva Conexión\nLista de Afiliados</string>
    <string name="servicio_t_cnico_nlista_de_afiliados">Servicio Técnico\nLista de Afiliados</string>
    <string name="asistencia_social_cooperativa_n_lista_de_afiliados">Asistencia Social Cooperativa\n Lista de Afiliados</string>
    <string name="unidades_de_emergencia_nlista_de_afiliados">Unidades de Emergencia\nLista de Afiliados</string>
    <string name="lista_de_unidades_de_emergencia">Lista de Unidades de Emergencia</string>
</resources>