<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="316dp"
        android:layout_height="367dp"
        android:background="@drawable/dialogborderround"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.542">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/string1"
            android:textColor="#6A5A53"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alias"
            android:textColor="#958181"
            android:textSize="@dimen/text16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etUbicacion" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:hint="@string/nombre_de_referncia"
            android:textColorHint="#958181"
            android:padding="5sp"
            android:background="@drawable/texbox"
            android:textColor="#000"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            tools:layout_editor_absoluteX="16dp"
            android:autofillHints="@string/c_digo_fijo"
            android:inputType="text" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/c_digo_fijo"
            android:textColor="#958181"
            android:textSize="@dimen/text16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <EditText
            android:id="@+id/etCodigoFijo"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:autofillHints="@string/c_digo_fijo"
            android:ems="10"
            android:hint="@string/ingrese_su_c_digo_fijo"
            android:inputType="number"
            android:background="@drawable/texbox"
            android:padding="5sp"
            android:textColor="@color/azul"
            android:textColorHint="#958181"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <EditText
            android:id="@+id/etUbicacion"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:autofillHints="@string/cod_ubicaci_n"
            android:hint="@string/cod_ubicaci_n"
            android:background="@drawable/texbox"
            android:inputType="text"
            android:padding="5sp"
            android:textColor="@color/azul"
            android:textColorHint="#958181"
            app:layout_constraintTop_toBottomOf="@+id/editText"
            tools:layout_editor_absoluteX="0dp" />

        <TextView
            android:id="@+id/editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/c_dula_de_identidad"
            android:textColor="#958181"
            android:textSize="@dimen/text16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etCodigoFijo"
            android:autofillHints="@string/c_digo_fijo"/>

        <Button
            android:id="@+id/btnDialogAceptar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="28dp"
            android:background="@color/celest"
            android:text="@string/aceptar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText2" />

        <Button
            android:id="@+id/btnDialogCancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="40dp"
            android:background="#045EAC"
            android:text="@string/cancelar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText2" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>