<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context="com.coopappiltda.coopappiltda.historial">

    <ScrollView
        android:id="@+id/scrooll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:gravity="center_vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/imgBack6"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:contentDescription="@string/volver"
                    android:src="@drawable/back" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:text="@string/consulta_de_facturas"
                    android:textColor="@color/azul"
                    android:textSize="@dimen/size24sp" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/linearLayout6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_marginTop="10dp"
                    android:background="@color/azul" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/datos"
                    android:textAlignment="center"
                    android:textColor="@color/azul" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/azul" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/linearLayout7"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout6">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nombre"
                    android:textColor="@color/azul" />

                <TextView
                    android:id="@+id/nombresocio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/nombre_de_socio"
                    android:textColor="@color/azul"
                    tools:ignore="RtlHardcoded" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/azul"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout7" />
            <LinearLayout
                android:id="@+id/linearLayout8"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                app:layout_constraintTop_toBottomOf="@+id/textView4">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/c_digo_fijo"
                    android:textColor="@color/azul" />

                <TextView
                    android:id="@+id/codigosocio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/c_digo_fijo"
                    android:textColor="@color/azul"
                    tools:ignore="RtlHardcoded" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/azul"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout8" />

            <LinearLayout
                android:id="@+id/linearLayout9"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                app:layout_constraintTop_toBottomOf="@+id/textView5">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/c_digo_de_ubicaci_n"
                    android:textColor="@color/azul" />

                <TextView
                    android:id="@+id/ubicscionsocio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/c_digo_de_ubicaci_n"
                    android:textColor="@color/azul"
                    tools:ignore="RtlHardcoded" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/azul"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout9" />

            <LinearLayout
                android:id="@+id/linearLayout10"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                app:layout_constraintTop_toBottomOf="@+id/textView6">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/direcci_n"
                    android:textColor="@color/azul" />

                <TextView
                    android:id="@+id/direccionsocio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/direcci_n"
                    android:textColor="@color/azul"
                    tools:ignore="RtlHardcoded" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/azul"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout10" />

            <LinearLayout
                android:id="@+id/linearLayout11"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                app:layout_constraintTop_toBottomOf="@+id/textView7">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_facturas_impagas"
                    android:textColor="@color/azul" />

                <TextView
                    android:id="@+id/facturassocio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/total_facturas_impagas"
                    android:textColor="@color/azul"
                    tools:ignore="RtlHardcoded" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/azul"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout11" />

            <LinearLayout
                android:id="@+id/linearLayout12"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                app:layout_constraintTop_toBottomOf="@+id/textView8">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_monto"
                    android:textColor="@color/azul" />

                <TextView
                    android:id="@+id/deudasocio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/monto"
                    android:textColor="@color/azul"
                    tools:ignore="RtlHardcoded" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/azul"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout12" />

            <LinearLayout
                android:id="@+id/linearLayout13"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                app:layout_constraintTop_toBottomOf="@+id/textView9">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fecha_de_corte"
                    android:textColor="@color/azul" />

                <TextView
                    android:id="@+id/cortesocio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/fecha_de_corte"
                    android:textColor="@color/azul"
                    tools:ignore="RtlHardcoded" />
            </LinearLayout>
            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/azul"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout13" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="center_vertical"
                android:text="@string/facturas"
                android:textAlignment="center"
                android:textColor="@color/azul"
                app:layout_constraintTop_toBottomOf="@+id/textView10"
                tools:ignore="RtlCompat" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/azul"
                app:layout_constraintTop_toBottomOf="@+id/textView11" />

            <LinearLayout
                android:id="@+id/linearLayout14"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="center_vertical"
                app:layout_constraintTop_toBottomOf="@+id/textView12">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:text="@string/mes"
                    android:textColor="@color/azul" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/consumo_m3"
                    android:textColor="@color/azul" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:text="@string/importe_bs"
                    android:textColor="@color/azul" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/estado"
                    android:textColor="@color/azul" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/azul"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout14" />

            <LinearLayout
                android:id="@+id/linearLayout5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView13">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/reciclerid"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>










</androidx.constraintlayout.widget.ConstraintLayout>